--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -134,5 +134,9 @@ a.desc:after {
 }
 
 .panel-primary {
-    border:none;
+    /*border:none;*/
+}
+
+.tradein-index .panel-heading{
+    display:none;
 }
